<resources>
    <string name="app_name">Lp.Entry</string>
    <string name="title_activity_login">Lp.Entry</string>
    <string name="app_version" translatable="false">1.3.0</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="min">Min.</string>
    <string name="max">Max.</string>
    <string name="all">All</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="settings">Settings</string>
    <string name="error_incorrect_password">This password is incorrect</string>


    <!-- Strings related to MainMenu -->
    <string name="changeprice">Change Price</string>
    <string name="deliverynote">Delivery note</string>
    <string name="editproduct">Edit product</string>
    <string name="info">Info</string>
    <string name="senddatas">Send</string>
    <string name="inventory">Inventory</string>
    <string name="inventorycount">Inventory Count</string>
    <string name="management">Management</string>
    <string name="printlabel">Print Label</string>
    <string name="productlist">Products</string>
    <string name="purchaseorder">Purchase Order</string>
    <string name="removeprintlabel">Remove From Print Label</string>
    <string name="reports">Reports</string>
    <string name="stockentry">Stock Entry</string>
    <string name="viewproduct">View Product</string>
    <string name="shortcurrent">Curr.</string>
    <string name="shortdifference">Diff.</string>
    <string name="shortnewstock">New</string>


    <!-- Strings related to ProductList -->
    <string name="search">Search</string>
    <string name="find">Find</string>
    <string name="filter">Filter</string>
    <string name="options">Options</string>
    <string name="barcode">Barcode</string>
    <string name="plu">Plu</string>
    <string name="origin">Origin</string>
    <string name="taxname">Tax Name</string>
    <string name="taxrate">Tax Rate</string>
    <string name="tax">Tax</string>
    <string name="groupname">Group Name</string>
    <string name="amount">Amount</string>
    <string name="amountperunit">Amount per unit</string>
    <string name="_package">Package</string>
    <string name="add">Add</string>
    <string name="addtoorderlist">Add to order list</string>
    <string name="deposit">Deposit</string>
    <string name="costprice">Cost Price</string>
    <string name="sellprice">Sell Price</string>
    <string name="stock">Stock</string>
    <string name="sort">Sort</string>
    <string name="productname">Product name</string>
    <string name="currentprice">Current price</string>
    <string name="newprice">New price</string>
    <string name="cancelchangedprice">Cancel changed price</string>
    <string name="change">Change</string>
    <string name="newproduct">New Product</string>
    <string name="removefromorderlist">Remove from order list</string>
    <array name="sortfield">
        <item>Product name</item>
        <item>Price</item>
        <item>Stock</item>
        <item>Group name</item>
    </array>
    <array name="sorttype">
        <item>Ascending</item>
        <item>Descending</item>
    </array>

    <!-- Edit/View Product -->
    <string name="unitname">Unit</string>
    <string name="gramaj">Unit Quantity</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="product">Product</string>

    <!-- Stockentry -->
    <string name="newstockentry">New stock entry</string>
    <string name="documentnumber">Doc.Number</string>
    <string name="documentdate">Doc.Date</string>
    <string name="removedelivery">Remove delivery</string>
    <string name="editdelivery">Edit delivery</string>
    <string name="editamount">Edit amount</string>
    <string name="removefromdelivery">Remove from list</string>
    <string name="supplier">Supplier</string>
    <string name="expirationdate">Expiration date</string>
    <string name="partnumber">Part number</string>

    <string name="invoice">Invoices</string>
    <string name="newinvoice">New Invoice</string>
    <string name="editinvoice">Edit Invoice</string>
    <string name="deleteinvoice">Delete Invoice</string>
    <string name="customer">Customer</string>
    <string name="customers">Customers</string>
    <string name="number">Number</string>
    <string name="date">Date</string>
    <string name="total">Total</string>
    <string name="discount">Discount</string>
    <string name="subtotal">Subtotal</string>
    <string name="print">Print</string>
    <string name="previousbalance">Previous Balance</string>
    <string name="newbalance">New Balance</string>

    <string name="totalbalance">Total Balance</string>


    <string name="notfinancial">MALI DEGERI YOKTUR</string>

    <!-- Strings related to Settings -->
    <string name="serversettings">Server Settings</string>
    <string name="language">Language</string>
    <string name="printtaxrowoninvoice">Print Tax On Invoice</string>
    <string name="portnumber">Port</string>
    <string name="serveraddress">Server Address</string>
    <string name="device">Device</string>
    <string name="registerdevice">Register Device</string>
    <string name="serialnumber">Serial Number</string>
    <string name="sync">Synchronize</string>
    <string name="connect">Connect</string>
    <string name="printer">Printer</string>
    <string name="selectprinter">Select Printer</string>
    <string name="othersettings">Other Settings</string>
    <string name="register_request_was_sent">Register request sent</string>
    <string name="device_cannot_registered">Device cannot registered</string>
    <string name="cannot_connect_to_the_server">Cannot connet to the server</string>
    <array name="languages">
        <item>Deutsch</item>
        <item>Français</item>
        <item>Vlaanderen</item>
        <item>Türkçe</item>
        <item>English</item>
    </array>
    <array name="currency">
        <item>EUR</item>
        <item>TL</item>
        <item>£</item>
        <item>CHF</item>
    </array>


    <string name="msg_areyousure">Are you sure?</string>
    <string name="msg_doubleclickforexit">Double Click for Exit</string>
    <string name="msg_sendingdata">Sending data</string>
    <string name="updating_the_database">Updating the database</string>
    <string name="updating_the_customer">Updating the Customers</string>
    <string name="msg_changed_the_product_price">Changed the product price</string>
    <string name="error_no_network_connection">Without network connection</string>
    <string name="error_couldnot_connect_to_the_server">Could not connect to the server</string>
    <string name="error_unregistered_device">Unregistered device</string>
    <string name="error_couldnot_find_product">Could not find product</string>
    <string name="title_activity_products">Products</string>
    <string name="title_activity_edit_product">Edit Product</string>
    <string name="msg_added_to_list">Added to list</string>
    <string name="update_was_done">Updated</string>
    <string name="msg_dont_empty_name_group_tax">Product name, Group, Unit and Tax Don\'t must empty.</string>
    <string name="title_activity_select_product">Select Produkt</string>
    <string name="title_activity_inventur">Inventory count</string>
    <string name="receiver">Receiver</string>
    <string name="newcustomer">New Customer</string>
    <string name="customercode">Customer Code</string>
    <string name="customername">Customer Name</string>
    <string name="phone1">Phone 1</string>
    <string name="phone2">Phone 2</string>
    <string name="address">Address</string>
    <string name="owner">Owner</string>
    <string name="email">E-Mail</string>
    <string name="balance">Balance</string>
    <string name="last_balance">Last Balance</string>

    <string name="collection">Collection</string>
    <string name="paymentcash">Cash</string>
    <string name="paymentcard">Credit Card</string>
    <string name="editcustomer">Edit Customer</string>
    <string name="taxid">Tax Id</string>
    <string name="taxoffice">Tax Office</string>
    <string name="editcollect">Edit</string>
    <string name="collects">Collects</string>
    <string name="signature">Signature</string>
    <string name="user">User</string>

    <string name="quantityprefix">Quantity Prefix</string>
    <string name="priceprefix">Price Prefix</string>
    <string name="value">Value</string>
    <string name="barcodesettings">Barcode Settings</string>
    <string name="currentinvoicetotal">Current Document Total</string>

    <string name="sendproducts">Send Products</string>
    <string name="sendchangedprices">Send Prices</string>
    <string name="sendlabellist">Send Label List</string>
    <string name="sendpurchaselist">Send Purchase List</string>
    <string name="senddeliveynotes">Send Delivery Notes</string>
    <string name="sendinvoices">Send Invoices</string>
    <string name="sendcustomers">Send Customers</string>
    <string name="sendcollets">Send Collects</string>
    <string name="sendstockcount">Send Stock Count</string>
    <string name="sendall">Send ALL</string>

    <array name="gramajfield">
        <item>Gr</item>
        <item>Kg</item>
        <item>Lt</item>
        <item>Ml</item>
        <item>Cl</item>
        <item>St</item>
    </array>
    <string name="title_activity_select_supplier">SelectSupplierActivity</string>
    <string name="action_settings">Settings</string>
    <string name="stocktransfers">Stock Transfers</string>
    <string name="newstocktransfer">New Stock Transfer</string>
    <string name="edittransfer">Edit Transfer</string>
    <string name="removetransfer">Delete Transfer</string>
    <string name="targetwarehouse">Target Warehouse</string>
    <string name="sendtransfers">Send Stock Transfers</string>
    <string name="printbalanceoninvoice">Imprimer le solde sur la facture</string>
    <string name="currency">Currency</string>
    <string name="showunitprice">Show Unit Price</string>
    <string name="menusettings">Menu Settings</string>


    <string name="_select_customer">Please Select Customer</string>"
    <string name="son_bakiye">Total Balance</string>


    <string name="product_already_exists">Product already exists</string>
    <string name="save_and_senden">Save + Senden</string>
    <string name="please_wait">Please wait…</string>
    <string name="print_label" translatable="false">Etiket yazdir</string>
    <string name="printlabel2" translatable="false">Etiket yazdır</string>

    <string name="depo_bulunamadi" translatable="false">Depo bulunamadi</string>

</resources>
