<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_purchase_suppliername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/supplier" />

        <Button
            style="@style/StdButton"
            android:background="@drawable/std_button"
            android:id="@+id/bt_purchase_select_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/product"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/ed_purchase_find"
            style="@style/AppTheme.EditText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bt_purchase_find"
            style="@style/StdButton"
            android:layout_width="80dp"
            android:layout_height="55dp"
            android:background="@drawable/std_button"
            android:text="@string/find"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <Button
            android:id="@+id/bt_purchase_barcode"
            style="@style/StdButton"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:background="@drawable/std_button"
            android:text="@string/barcode"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:text="@string/productname" />

    <TextView
        android:id="@+id/lbl_purchase_productname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="5dp"
        android:text="Adan Zye ANDROID PROGRAMLAMA BAŞVURU KİTABI 123. BASKI Dursun ÇAKIR"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorWhite" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/amount" />

        <EditText
            style="@style/AppTheme.EditText"
            android:id="@+id/ed_purchase_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:digits="0123456789.,"
            android:inputType="numberDecimal" />

        <ToggleButton
            android:id="@+id/bt_purchase_package"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/_package"
            android:textOn="@string/_package"
            android:checked="true"/>
        <Button
            style="@style/StdButton"
            android:background="@drawable/std_button"
            android:id="@+id/bt_purchase_add"
            android:layout_width="wrap_content"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/add"/>
    </LinearLayout>

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/ls_purchase_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <Button
            style="@style/StdButton"
            android:background="@drawable/std_button"
            android:id="@+id/bt_purchase_cancel"
            android:layout_width="wrap_content"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
        <TextView
            android:id="@+id/lbl_purchase_productcount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"/>
        <Button
            style="@style/StdButton"
            android:background="@drawable/std_button"
            android:id="@+id/bt_purchase_send"
            android:layout_width="wrap_content"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/senddatas"/>
    </LinearLayout>
</LinearLayout>
