<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_collect_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@color/colorButtonBackground"
            android:text="@string/customer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/number" />

        <EditText
            style="@style/AppTheme.EditText"
            android:id="@+id/ed_collect_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/date" />

        <EditText
            style="@style/AppTheme.EditText"
            android:id="@+id/ed_collect_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:focusable="false"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/total" />

        <EditText
            style="@style/AppTheme.EditText"
            android:id="@+id/ed_collect_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="right" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.55" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/description" />

    <EditText
        style="@style/AppTheme.EditText"
        android:id="@+id/ed_collect_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:maxLines="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_collect_creditcard"
            style="@style/StdButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/std_button"
            android:drawableLeft="@mipmap/img_creditcard"
            android:text="@string/paymentcard" />

        <Button
            android:id="@+id/bt_collect_cash"
            style="@style/StdButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/std_button"
            android:drawableLeft="@mipmap/img_collection"
            android:text="@string/paymentcash" />
    </LinearLayout>

</LinearLayout>
